@@ -1971,6 +1971,9 @@ $wgDisableLangConversion = false;
 /** Whether to enable language variant conversion for links. */
 $wgDisableTitleConversion = false;
 
+/** Whether to enable language cononical in meta data. */
+$wgDisableLangCanonical = false;
+
 /** Default variant code, if false, the default will be the language code */
 $wgDefaultLanguageVariant = false;
 
