@@ -186,6 +186,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   is usually to set it to -1 to disable the limit)
 * (bug 25397) Allow uploading (not displaying) of WebP images, disabled by default
 * (bug 23194) Special:ListFiles now has thumbnails
+* Use hreflang to specify canonical and alternate links, search engine friendly
+  when a wiki has multiple variant languages.
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive
